Added completed assignment files to repo

--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,18 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
-    "\n",
-    "# reflect the tables\n"
+    "Base = automap_base()\n",
+    "# reflect the tables\n",
+    "Base.prepare(engine, reflect=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -81,25 +82,29 @@
     }
    ],
    "source": [
-    "# View all of the classes that automap found\n"
+    "# View all classes found by Automap\n",
+    "print(Base.classes.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save references to each table\n"
+    "# Save references to each table\n",
+    "Measurement = Base.classes.measurement\n",
+    "Station = Base.classes.station"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
    ]
   },
   {
@@ -111,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -126,12 +131,15 @@
     }
    ],
    "source": [
-    "# Find the most recent date in the data set.\n"
+    "# Find the most recent date in the data set.\n",
+    "most_recent_date = session.query(func.max(Measurement.date)).scalar()\n",
+    "most_recent_date = datetime.strptime(most_recent_date, '%Y-%m-%d')\n",
+    "print(f\"The most recent date is: {most_recent_date}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -156,27 +164,37 @@
     }
    ],
    "source": [
-    "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
-    "# Starting from the most recent data point in the database. \n",
+    "# Query precipitation data for the last 12 months\n",
+    "precipitation_data = session.query(Measurement.date, Measurement.prcp).\\\n",
+    "    filter(Measurement.date >= one_year_ago).\\\n",
+    "    order_by(Measurement.date).all()\n",
     "\n",
-    "# Calculate the date one year from the last date in data set.\n",
+    "# Convert query results to a Pandas DataFrame\n",
+    "precip_df = pd.DataFrame(precipitation_data, columns=[\"Date\", \"Precipitation\"])\n",
+    "precip_df.set_index(\"Date\", inplace=True)\n",
     "\n",
+    "# Drop any rows with null values\n",
+    "precip_df.dropna(inplace=True)\n",
     "\n",
-    "# Perform a query to retrieve the data and precipitation scores\n",
+    "# Sort by date\n",
+    "precip_df.sort_index(inplace=True)\n",
     "\n",
+    "# Display the DataFrame\n",
+    "print(precip_df.head())\n",
     "\n",
-    "# Save the query results as a Pandas DataFrame. Explicitly set the column names\n",
-    "\n",
-    "\n",
-    "# Sort the dataframe by date\n",
-    "\n",
-    "\n",
-    "# Use Pandas Plotting with Matplotlib to plot the data\n"
+    "# Plot the precipitation data\n",
+    "precip_df.plot(rot=90, figsize=(10, 5))\n",
+    "plt.title(\"Precipitation (Last 12 Months)\")\n",
+    "plt.ylabel(\"Inches\")\n",
+    "plt.xlabel(\"Date\")\n",
+    "plt.legend([\"Precipitation\"])\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +276,8 @@
     }
    ],
    "source": [
-    "# Use Pandas to calculate the summary statistics for the precipitation data\n"
+    "# Use Pandas to calculate the summary statistics for the precipitation data\n",
+    "print(precip_df.describe())"
    ]
   },
   {
@@ -270,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -285,12 +304,14 @@
     }
    ],
    "source": [
-    "# Design a query to calculate the total number of stations in the dataset\n"
+    "# Design a query to calculate the total number of stations in the dataset\n",
+    "total_stations = session.query(func.count(Station.station)).scalar()\n",
+    "print(f\"Total number of stations: {total_stations}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -314,12 +335,29 @@
    ],
    "source": [
     "# Design a query to find the most active stations (i.e. which stations have the most rows?)\n",
-    "# List the stations and their counts in descending order.\n"
+    "# List the stations and their counts in descending order.\n",
+    "active_stations = session.query(\n",
+    "    Measurement.station, \n",
+    "    func.count(Measurement.station)\n",
+    ").group_by(Measurement.station).\\\n",
+    "    order_by(func.count(Measurement.station).desc()).all()\n",
+    "\n",
+    "print(\"Stations and their observation counts (in descending order):\")\n",
+    "for station, count in active_stations:\n",
+    "    print(f\"Station: {station}, Count: {count}\")\n",
+    "\n",
+    "# Query the most active station by observation counts\n",
+    "most_active_station = session.query(Measurement.station, func.count(Measurement.station)).\\\n",
+    "    group_by(Measurement.station).\\\n",
+    "    order_by(func.count(Measurement.station).desc()).\\\n",
+    "    first()\n",
+    "\n",
+    "print(f\"The most active station is {most_active_station[0]} with {most_active_station[1]} observations.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -334,12 +372,20 @@
     }
    ],
    "source": [
-    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n"
+    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "temp_stats = session.query(\n",
+    "    func.min(Measurement.tobs),\n",
+    "    func.max(Measurement.tobs),\n",
+    "    func.avg(Measurement.tobs)\n",
+    ").filter(Measurement.station == most_active_station[0]).all()\n",
+    "\n",
+    "print(f\"Temperature stats for station {most_active_station[0]}:\")\n",
+    "print(f\"Lowest: {temp_stats[0][0]}, Highest: {temp_stats[0][1]}, Average: {temp_stats[0][2]:.1f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +411,23 @@
    ],
    "source": [
     "# Using the most active station id\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
+    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "temperature_data = session.query(Measurement.date, Measurement.tobs).\\\n",
+    "    filter(Measurement.station == most_active_station[0]).\\\n",
+    "    filter(Measurement.date >= one_year_ago).\\\n",
+    "    order_by(Measurement.date).all()\n",
+    "\n",
+    "# Convert query results to a Pandas DataFrame\n",
+    "temp_df = pd.DataFrame(temperature_data, columns=[\"Date\", \"Temperature\"])\n",
+    "temp_df.set_index(\"Date\", inplace=True)\n",
+    "\n",
+    "# Plot the temperature data as a histogram\n",
+    "temp_df.plot(kind=\"hist\", bins=12, figsize=(8, 6))\n",
+    "plt.title(f\"Temperature Observations at Station {most_active_station[0]}\")\n",
+    "plt.xlabel(\"Temperature\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
